try changing fullscreen

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -64,68 +64,9 @@ var map = new mapboxgl.Map({
 map.addControl(new mapboxgl.FullscreenControl());
 map.addControl(new mapboxgl.NavigationControl());
 
-function add3DBuildings() {
-    // Insert the layer beneath any symbol layer.
-    var layers = map.getStyle().layers;
-
-    var labelLayerId;
-    for (var i = 0; i < layers.length; i++) {
-        if (layers[i].type === 'symbol' && layers[i].layout['text-field']) {
-            labelLayerId = layers[i].id;
-            break;
-        }
-    }
-
-    map.addLayer({
-        'id': '3d-buildings',
-        'source': 'composite',
-        'source-layer': 'building',
-        'filter': ['==', 'extrude', 'true'],
-        'type': 'fill-extrusion',
-        'minzoom': 15,
-        'paint': {
-            'fill-extrusion-color': '#aaa',
-
-            // use an 'interpolate' expression to add a smooth transition effect to the
-            // buildings as the user zooms in
-            'fill-extrusion-height': [
-                "interpolate", ["linear"], ["zoom"],
-                15, 0,
-                15.05, ["get", "height"]
-            ],
-            'fill-extrusion-base': [
-                "interpolate", ["linear"], ["zoom"],
-                15, 0,
-                15.05, ["get", "min_height"]
-            ],
-            'fill-extrusion-opacity': .6
-        }
-    }, labelLayerId);
-}
-
-//     map.addSource('markers', {
-//   type: 'geojson',
-//   data: {
-//     "type": "FeatureCollection",
-//     "features": [
-//       {
-//         "type": "Feature",
-//         "properties": {},
-//         "geometry": {
-//           "type": "Point",
-//           "coordinates": [
-//             35.08758544921875,
-//             31.500116606911842
-//           ]
-//         }
-//       }
-//     ]
-//   }
-// });
-// }
 
 map.on('load', function() {
-  var url = 'http://localhost:8000/destroyedCities.json';
+  var url = 'https://mohamedzv3.github.io/destroyedCities.json';
   map.addSource('point', { type: 'geojson', data: url});
 });
 
