try to use cors proxy

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -65,7 +65,7 @@ map.addControl(new mapboxgl.FullscreenControl());
 map.addControl(new mapboxgl.NavigationControl());
 
 var myLayer = L.mapbox.featureLayer()
-  .loadURL('https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482')
+  .loadURL('https://cors-anywhere.herokuapp.com/' + 'https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482')
   .addTo(map);
 // map.on('load', function() {
 //   var url = 'https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482';
