--- a/fullscreen.html
+++ b/fullscreen.html
@@ -68,9 +68,43 @@ map.addControl(new mapboxgl.NavigationControl());
 //   .loadURL('' + 'https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482')
 //   .addTo(map);
 map.on('load', function() {
-  var url = 'http://cors.io/?' + 'https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482';
-  map.addSource('point', { type: 'geojson', data: url});
+//   var url = 'http://cors.io/?' + 'https://gist.github.com/mohamedzv3/60e6cb4b4e98341b6af0692f45e49482';
+
+  map.addSource('point', { type: 'geojson', data: "destroyedCities.json"});
 });
+
+// map.on("load", function () {
+//     /* Image: An image is loaded and added to the map. */
+//     map.loadImage("https://i.imgur.com/MK4NUzI.png", function(error, image) {
+//     if (error) throw error;
+//     map.addImage("custom-marker", image);
+//     /* Style layer: A style layer ties together the source and image and specifies how they are displayed on the map. */
+//     map.addLayer({
+//         id: "markers",
+//         type: "symbol",
+//     /* Source: A data source specifies the geographic coordinate where the image marker gets placed. */
+//         source: {
+//             type: "geojson",
+//             data: {
+//                 type: 'FeatureCollection',
+//                 features: [
+//                     {
+//                         type: 'Feature',
+//                         properties: {},
+//                         geometry: {
+//                             type: "Point",
+//                             coordinates: [34.8046, 31.4143]
+//                         }
+//                     }
+//                     ]
+//                 }
+//             },
+//         layout: {
+//                 "icon-image": "custom-marker",
+//             }
+//         });
+//     });
+// });
 
 var layerList = document.getElementById('menu');
 var inputs = layerList.getElementsByTagName('input');
