tried using directly file

--- a/fullscreen.html
+++ b/fullscreen.html
@@ -73,6 +73,9 @@ map.addLayer({
     'source': 'point',
     'type': 'circle',
     'layout': {},
+    'paint': {
+        'circle-color': '#f08'
+    }
 });
 
 var layerList = document.getElementById('menu');
