--- a/fullscreen.html
+++ b/fullscreen.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset='utf-8' />
-    <title>View a fullscreen map</title>
+    <title>Destroyed Cities of Palestine</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.52.0/mapbox-gl.css' rel='stylesheet' />
@@ -10,6 +10,31 @@
     <style>
         body { margin:0; padding:0; }
         #map { position:absolute; top:0; bottom:0; width:100%; }
+
+    .legend {
+        display: block;
+        background-color: #fff;
+        border-radius: 3px;
+        bottom: 30px;
+        box-shadow: 0 1px 2px rgba(0,0,0,0.10);
+        font: 12px/20px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+        padding: 10px;
+        position: absolute;
+        right: 10px;
+        z-index: 1;
+    }
+
+    .legend h4 {
+        margin: 0 0 10px;
+    }
+
+    .legend div span {
+        border-radius: 50%;
+        display: inline-block;
+        height: 10px;
+        margin-right: 5px;
+        width: 10px;
+    }
 
     </style>
 
@@ -29,8 +54,12 @@
 
 </style>
 
-<div id='map'>
+<div id='map'></div>
 
+<div id='town-legend' class='legend'>
+        <h4>Types of Destroyed Towns</h4>
+        <div><span style='background-color: #f08'></span>Destroyed in 1948</div>
+        <div><span style='background-color: orange'></span>Destroyed in 1967</div>
 </div>
 
 <div id='menu' class='map-overlay top'>
